# FoCS_project

./: .gitignore  LICENSE  README.md  Solution-final.ipynb  Solution.ipynb  Untitled.ipynb  pyproject.toml  solution-01-primary-final.ipynb
