[tool.poetry]
name = "sanjastanisic-focs-project"
version = "0.1.0"
description = ""
authors = ["Sanja Stanisic <sanjastanisic@t-com.me>"]
readme = "README.md"
packages = [{include = "sanjastanisic_focs_project"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
